refactor: 프레임, 셀 투표 완성