@@ -11,6 +11,7 @@ import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
@@ -20,137 +21,133 @@ import com.picpic.server.frame.dto.ws.FrameWsMessage;
 
 import lombok.RequiredArgsConstructor;
 
-/**
- * 프레임 투표 단계: 20초 타이머, 조기 종료, 확정 브로드캐스트
- * (원본 FrameVoteService.java :contentReference[oaicite:2]{index=2} 확장)
- */
 @Service
 @RequiredArgsConstructor
 public class FrameVoteService {
 
 	private final SimpMessagingTemplate template;
+	private final RedisTemplate<String, Object> redisTemplate;
 
-	// 스케줄러 풀
 	private final ScheduledExecutorService scheduler =
-		Executors.newScheduledThreadPool(Runtime.getRuntime().availableProcessors());
+			Executors.newScheduledThreadPool(Runtime.getRuntime().availableProcessors());
 
-	// roomId → 스케줄된 Future
 	private final Map<String, ScheduledFuture<?>> voteTasks = new ConcurrentHashMap<>();
-
-	// roomId → 투표 완료한 userId 집합
 	private final Map<String, Set<Long>> voteCompletions = new ConcurrentHashMap<>();
-
-	// roomId → 참가자 수
 	private final Map<String, Integer> participantCounts = new ConcurrentHashMap<>();
-
 	private final Map<String, Long> selectedOptions = new ConcurrentHashMap<>();
 
-	/**
-	 * 투표 단계 시작 → 클라이언트에 START_VOTE 전송
-	 */
 	public void startVoting(String roomId, List<Long> participantIds) {
+		redisTemplate.delete(voteKey(roomId));
+		for (Long uid : participantIds) {
+			redisTemplate.delete(userVoteKey(roomId, uid));
+		}
 		participantCounts.put(roomId, participantIds.size());
 		voteCompletions.put(roomId, ConcurrentHashMap.newKeySet());
 
 		long now = System.currentTimeMillis();
-		// 클라이언트에 카운트다운 정보 포함
 		FrameActionResponse payload = FrameActionResponse.builder()
-			.type(FrameMessageType.START_VOTE)
-			.startTimeMillis(now)
-			.durationSeconds(20)
-			.build();
+				.type(FrameMessageType.START_VOTE)
+				.startTimeMillis(now)
+				.durationSeconds(20)
+				.build();
 
-		template.convertAndSend(
-			"/topic/room/" + roomId,
-			new FrameWsMessage<>(FrameMessageType.START_VOTE, null, payload)
-		);
+		template.convertAndSend("/topic/room/" + roomId,
+				new FrameWsMessage<>(FrameMessageType.START_VOTE, null, payload));
 
-		// 20초 후 자동 확정 스케줄
 		ScheduledFuture<?> future = scheduler.schedule(
-			() -> finalizeVote(roomId),
-			20, TimeUnit.SECONDS
-		);
+				() -> finalizeVote(roomId), 20, TimeUnit.SECONDS);
 		voteTasks.put(roomId, future);
 	}
 
-	/**
-	 * 사용자가 투표를 제출했을 때 호출
-	 */
 	public void submitVote(String roomId, Long userId, Long optionId) {
-		// (기존 vote 저장 로직 호출)
-		// 예: frameVoteService.vote(roomId, optionId, userId);
+		// 이전 선택 조회
+		String userKey = userVoteKey(roomId, userId);
+		Object prevObj = redisTemplate.opsForValue().get(userKey);
+		Long prev = (prevObj == null) ? null : toLong(prevObj);
 
-		// 완료 추적
-		Set<Long> done = voteCompletions.get(roomId);
-		done.add(userId);
+		// 이전 표 -1
+		if (prev != null && !prev.equals(optionId)) {
+			redisTemplate.opsForHash().increment(voteKey(roomId), prev.toString(), -1);
+		}
+		// 새 표 +1
+		redisTemplate.opsForHash().increment(voteKey(roomId), optionId.toString(), 1);
+		// 현재 선택 저장
+		redisTemplate.opsForValue().set(userKey, optionId);
 
-		// 모두 완료 시 조기 확정
-		if (done.size() == participantCounts.get(roomId)) {
-			voteTasks.get(roomId).cancel(false);
+		// 최소 한 번이라도 선택했으면 완료로 간주(바꾸는 건 허용)
+		voteCompletions.computeIfAbsent(roomId, k -> ConcurrentHashMap.newKeySet()).add(userId);
+
+		Integer total = participantCounts.get(roomId);
+		if (total != null && voteCompletions.get(roomId).size() == total) {
+			ScheduledFuture<?> task = voteTasks.remove(roomId);
+			if (task != null) task.cancel(false);
 			finalizeVote(roomId);
 		}
 	}
 
-	/**
-	 * 투표 확정 및 브로드캐스트
-	 */
 	private synchronized void finalizeVote(String roomId) {
-		// 중복 실행 방지
-		if (!participantCounts.containsKey(roomId))
-			return;
+		if (!participantCounts.containsKey(roomId)) return;
 
-		String voteKey = "room:" + roomId + ":votes";
-		@SuppressWarnings("unchecked")
-		Map<String, Long> raw = (Map<String, Long>)redisTemplate.opsForHash().entries(voteKey);
-
+		Map<Object, Object> raw = redisTemplate.opsForHash().entries(voteKey(roomId));
 		Long selectedOption;
-		if (raw.isEmpty()) {
-			// 투표자가 없으면 기본 프레임 선택 (예: 첫 번째 프레임)
-			selectedOption = 0L;
+		if (raw == null || raw.isEmpty()) {
+			selectedOption = 0L; // 기본값(원하면 바꿔)
 		} else {
-			// String key(optionId) → Long count
-			Map<Long, Integer> counts = raw.entrySet().stream()
-				.collect(Collectors.toMap(
-					e -> Long.valueOf(e.getKey()),
-					e -> e.getValue().intValue()
-				));
+			Map<Long, Integer> counts = raw.entrySet().stream().collect(Collectors.toMap(
+					e -> toLong(e.getKey()),
+					e -> toInt(e.getValue()),
+					Integer::sum));
 
-			// 최댓값 계산
-			int maxVotes = counts.values().stream()
-				.max(Integer::compareTo)
-				.orElse(0);
-
-			// 동점 처리용 리스트
+			int maxVotes = counts.values().stream().max(Integer::compareTo).orElse(0);
 			List<Long> topOptions = counts.entrySet().stream()
-				.filter(e -> e.getValue() == maxVotes)
-				.map(Map.Entry::getKey)
-				.collect(Collectors.toList());
+					.filter(e -> e.getValue() == maxVotes)
+					.map(Map.Entry::getKey)
+					.toList();
 
-			// 랜덤으로 하나 선택
 			selectedOption = topOptions.get(new Random().nextInt(topOptions.size()));
 		}
 
-		// 결과 저장
 		selectedOptions.put(roomId, selectedOption);
 
-		// 확정 결과 브로드캐스트
 		FrameActionResponse payload = FrameActionResponse.builder()
-			.type(FrameMessageType.VOTE_FRAME)
-			.selectedFrameId(selectedOption)
-			.build();
-		template.convertAndSend(
-			"/topic/room/" + roomId,
-			new FrameWsMessage<>(FrameMessageType.VOTE_FRAME, null, payload)
-		);
+				.type(FrameMessageType.VOTE_FRAME)
+				.selectedFrameId(selectedOption)
+				.build();
 
-		// 메모리 정리
-		voteTasks.remove(roomId);
-		voteCompletions.remove(roomId);
-		participantCounts.remove(roomId);
+		template.convertAndSend("/topic/room/" + roomId,
+				new FrameWsMessage<>(FrameMessageType.VOTE_FRAME, null, payload));
+
+		cleanup(roomId);
 	}
 
 	public Long getSelectedOption(String roomId) {
 		return selectedOptions.get(roomId);
 	}
 
+	// ───────── helpers ─────────
+	private String voteKey(String roomId) { return "room:" + roomId + ":votes"; }
+	private String userVoteKey(String roomId, Long userId) { return "room:" + roomId + ":vote:user:" + userId; }
+
+	private Long toLong(Object o) {
+		if (o == null) return null;
+		if (o instanceof Long l) return l;
+		if (o instanceof Integer i) return i.longValue();
+		if (o instanceof String s) return Long.parseLong(s);
+		if (o instanceof byte[] b) return Long.parseLong(new String(b));
+		throw new IllegalArgumentException("Unsupported key type: " + o.getClass());
+	}
+	private Integer toInt(Object o) {
+		if (o == null) return 0;
+		if (o instanceof Integer i) return i;
+		if (o instanceof Long l) return Math.toIntExact(l);
+		if (o instanceof Double d) return d.intValue();
+		if (o instanceof String s) return Integer.parseInt(s);
+		if (o instanceof byte[] b) return Integer.parseInt(new String(b));
+		throw new IllegalArgumentException("Unsupported value type: " + o.getClass());
+	}
+	private void cleanup(String roomId) {
+		voteTasks.remove(roomId);
+		voteCompletions.remove(roomId);
+		participantCounts.remove(roomId);
+	}
 }
